--- a/app/src/main/res/layout/fragment_headlines.xml
+++ b/app/src/main/res/layout/fragment_headlines.xml
@@ -5,6 +5,9 @@
 
     <data>
 
+        <variable
+            name="viewModel"
+            type="com.example.newsapplication.viewmodel.HeadlineViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
