--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -5,16 +5,24 @@
 
     <data>
 
+        <variable
+            name="news"
+            type="com.example.newsapplication.apicall.NewsProperty" />
+
+        <variable
+            name="clickListener"
+            type="com.example.newsapplication.newsui.NewsClickListener" />
     </data>
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            app:cardCornerRadius="10dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginBottom="24dp"
-            android:layout_height="wrap_content">
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        app:cardCornerRadius="10dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginBottom="24dp"
+        android:onClick="@{() -> clickListener.onClick(news)}"
+        android:layout_height="wrap_content">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -27,6 +35,7 @@
                 android:layout_height="0dp"
                 android:background="@color/white"
                 android:scaleType="fitXY"
+                app:imageUrl="@{news.urlToImage}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -39,31 +48,33 @@
 
 
 
-            <TextView
-                android:id="@+id/tv_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="12dp"
-                android:layout_marginEnd="12dp"
-                android:fontFamily="@font/roboto_slab_regular"
-                android:layout_marginBottom="24dp"
-                android:maxLines="2"
-                android:textColor="#f2f2f2"
-                android:textSize="20sp"
-                tools:text="@string/title" />
+                <TextView
+                    android:id="@+id/tv_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="12dp"
+                    android:layout_marginEnd="12dp"
+                    android:fontFamily="@font/roboto_slab_regular"
+                    android:layout_marginBottom="24dp"
+                    android:maxLines="2"
+                    android:text="@{news.title}"
+                    android:textColor="#f2f2f2"
+                    android:textSize="20sp"
+                    tools:text="@string/title" />
 
-            <TextView
-                android:id="@+id/author"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:maxLines="1"
-                android:layout_below="@+id/tv_title"
-                android:layout_marginStart="12dp"
-                android:layout_marginEnd="12dp"
-                android:layout_marginBottom="12dp"
-                android:fontFamily="@font/roboto_slab_bold"
-                android:textColor="#bababa"
-                tools:text="@string/author" />
+                <TextView
+                    android:id="@+id/author"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:maxLines="1"
+                    android:layout_below="@+id/tv_title"
+                    android:layout_marginStart="12dp"
+                    android:layout_marginEnd="12dp"
+                    android:layout_marginBottom="12dp"
+                    android:text="@{news.author}"
+                    android:fontFamily="@font/roboto_slab_bold"
+                    android:textColor="#bababa"
+                    tools:text="@string/author" />
 
                 <TextView
                     android:id="@+id/dataAndTime"
@@ -75,6 +86,7 @@
                     android:layout_marginStart="12dp"
                     android:layout_marginEnd="12dp"
                     android:layout_marginBottom="12dp"
+                    android:text="@{news.publishedAt}"
                     android:fontFamily="@font/roboto_slab_bold"
                     android:textColor="#bababa"
                     tools:text="@string/datetime" />
