--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="light_grey">#F3F3F3</color>
     <color name="light_grey2">#E3E3E3</color>
     <color name="recyclerview_background_color">#464646</color>
+    <color name="author_color">#f2f2f2</color>
 </resources>
